settings: add database parameters to local_settings

--- a/gconfs/local_settings.py.sample
+++ b/gconfs/local_settings.py.sample
@@ -4,5 +4,14 @@ from gconfs import settings
 DEBUG = True
 ALLOWED_HOSTS = []
 
+DATABASES = {
+    'default': {
+        'ENGINE': 'django.db.backends.postgresql',
+        'HOST': '127.0.0.1',
+        'NAME': 'gconfs',
+        'USER': 'postgres',
+    }
+}
+
 SOCIAL_AUTH_GOOGLE_OAUTH2_KEY = '***REMOVED***'
 SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET = '***REMOVED***'
