talks: add youtube video synchronisation

--- a/gconfs/local_settings.py.sample
+++ b/gconfs/local_settings.py.sample
@@ -15,3 +15,6 @@ DATABASES = {
 
 SOCIAL_AUTH_GOOGLE_OAUTH2_KEY = '***REMOVED***'
 SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET = '***REMOVED***'
+
+YOUTUBE_API_KEY = '***REMOVED***'
+YOUTUBE_RUN_EVERY_MINS=120
