--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ social-auth-app-django==3.1
 django-crispy-forms==1.7
 reportlab==3.5
 pdf2image==1.5
-django-bootstrap4
 django-bootstrap-datepicker-plus
+google-api-python-client
+django-cron
 social-auth-core[openidconnect]
